--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
                 <div id="branding">
                     <a href="index.html"><h1>Developers.wtf</h1></a>
                 </div>
-                <!--
-
--->
+                
                 <nav>
                     <ul>
                         <li class="current">
@@ -65,7 +63,7 @@
         <section id="showcase">
             <div class="container">
                 <h1>Developers.wtf</h1>
-                <p>Developers.wtf evoloved with the aim of bridging the gap between students and professionals. With that in mind we hold monthly meetups and technical sessions by experts from the industry. Come let’s get socialised and delve into the world of learning with the real world developers and professionals. With an idea to bridge the gap between the professionals and new comers. We would love you to join and see how we can make a difference together.</p>
+                <p>Developers.wtf evoloved with the aim of bridging the gap between students and professionals. With that in mind we hold monthly meetups and technical sessions by experts from the industry. Come let’s get socialised and delve into the world of learning with the real world developers and professionals. We would love to see you join us and see how we can make a difference together.</p>
             </div>
         </section>
         
