--- a/about-us.html
+++ b/about-us.html
@@ -62,7 +62,7 @@
         <section id="showcase">
             <div class="container">
                 <h1>About Us</h1>
-                <p>The Developers.wtf society is a team of techies. With a mission to provide folks a platform to learn, express and explore the aspiring technologies around us. We are tending to collaborate, passion and skill to empower the learners. Our dream is to make technology available to all individuals and groups working to make positive change – regardless of size, budget or location.</p>
+                <p>The Developers.wtf society is a team of techies. With a mission to provide you folks a platform to learn, express and explore the aspiring technologies around us. We are intending to collaborate, passion and skill to empower the learners. Our dream is to make technology available to all individuals and groups working to make a positive change – regardless of size, budget or location.</p>
             </div>
         </section>
 
